# tf2-utils

./: .buildinfo  .flake8  .gitignore  LICENSE  LICENSE.txt  README.md  README.rst  conftest.py  currencies.json  example.env  genindex.html  get_community_market_price.py  index.html  items_game.txt  objects.inv  paints.js  paints.json  py-modindex.html  pyproject.toml  pytest.ini  search.html  searchindex.js  setup.py  sphinx-reading-durations.json
.doctrees/: environment.pickle  index.doctree
aethez/: main.py
api.aethez.me/: main.py
backpack.tf/: group_members.json
backpacktf/: get_listings.py  listings.json
bot.tf/: group_members.json
bottf/: bots.json
cash.tf/: main.py  schema.json
docs/: conf.py  index.rst
examples/: backpack_tf_socket.py  example_inventory.json  get_inventory_skus.py  prices_tf_socket.py  steamsupply_inventory_fetch.py
mannco.store/: group_members.json
manncostore/: bots.json
marketplace.tf/: bots.json  get_bots.py
marketplacetf/: group_members.json
pages/: backpack_tf.html  currency.html  inventory.html  item.html  marketplace_tf.html  offer.html  prices_tf.html  prices_tf_websocket.html  schema.html  sku.html  sockets.html  utils.html
tests/: test_backpack_tf.py  test_currency.py  test_inventory.py  test_item.py  test_marketplace_tf.py  test_offer.py  test_prices_tf.py  test_providers.py  test_schema.py  test_sku.py  test_utils.py
tf2automatic/: bots.json  get_all_bots.py  get_key_value.py  group_members.json  prices.json
tf2utils/: currencies.json  enums.py  market.py  marketplacetf.py  methods.py  paints.json  (+5 more)
(+71 files in other folders)
